benchresults now contain interpreted jmurmel and abcl, too